Rename estate to advs, add ebay adapter, add title to emails etc

--- a/mailers/templates/notify_html_part.slim
+++ b/mailers/templates/notify_html_part.slim
@@ -5,9 +5,9 @@
     p
       a href="#{a[:link]}"
         - if a[:action] == :changed_price
-          | #{a[:old_price]} -> #{a[:price]}
+          | #{a[:title]} - #{a[:old_price]} -> #{a[:price]}
         - else
-          = a[:price]
+          | #{a[:title]} - #{a[:price]}
 
     p = a[:description]
     
